--- a/templates/base.html
+++ b/templates/base.html
@@ -13,17 +13,16 @@
   <header class="container mt-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="/">AgroNavigator</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/about">About <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link disabled" href="#">Login</a>
-      <a class="nav-item nav-link disabled" href="#">Auth</a>
-      <a class="nav-item nav-link disabled" href="#">Upload</a>
+
+      <a class="nav-item nav-link active" href="/upload">Upload<span class="sr-only">(current)</span></a></a>
+       <a class="nav-item nav-link disable" href="#">Login</a>
+        <a class="nav-item nav-link disable" href="#">Auth</a>
     </div>
-  </div>
+
     </nav>
 
 
