--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,8 @@
         <div class='row'>
             <div class="col-5"></div>
             <div class="col-2" align="center">
-                <footer>
-                <a href="/db" class="btn btn-link btn-lg">START</a>
-                </footer>
+
+                <a href="/db" class="btn btn-success btn-lg">START</a>
             </div>
         </div>
 
