--- a/templates/upload.html
+++ b/templates/upload.html
@@ -38,7 +38,7 @@
 
             <div class="col-2" align="center"  >
                 <footer>
-                <a href="/db" class="btn btn-outline-dark btn">BACK</a>
+                <a href="/" class="btn btn-outline-dark btn">BACK</a>
                 </footer>
             </div>
         </div>
