--- a/templates/db.html
+++ b/templates/db.html
@@ -53,9 +53,9 @@
         <td bgcolor="#FFD700">{{ i[11] }}</td>
         {% elif i[11] == 'weeds' %}
 
-        <td bgcolor="#FFA07A">{{ i[11] }}</td>
+        <td bgcolor="#9932CC">{{ i[11] }}</td>
         {%else %}
-        <td bgcolor="#00FA9A">{{ i[11] }}</td>
+        <td bgcolor="#87CEEB">{{ i[11] }}</td>
         {%endif%}
         <td><a href = '/map/{{i[12]}}'>{{i[1]}}</a></td>
     </tr>
